fixed overflow hidden at service section

--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ ul {
 =================================== */ 
 
 #service .service-container {
-    max-width: var(--normal-max-width);
+    max-width: var(--wide-max-width);
     margin: 70px auto 0;
     padding: 0 20px;
     display: grid;
@@ -313,7 +313,7 @@ ul {
     grid-template-rows: repeat(2, 1fr);
     grid-row-gap: 20px;
     grid-column-gap: 30px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 #service .service-container> * {
